data/derived/fa15/progs/unify/prog1476.ml.out
Characters 12-25:
  let c3 () = (8, 123, 498)
              ^^^^^^^^^^^^^
Error: This expression has type int * int * int
       This is not a function; it cannot be applied.
